--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 </head>
 <body>
     <div class="navbar">
-        <button onclick="showimage()">私人问诊</button>
-        <button>a</button>
-        <button>b</button>
-        <button>c</button>
-        <button>d</button>
+        <button onclick="showSection('private')">私人问诊</button>
+        <button onclick="showSection('a')">a</button>
+        <button onclick="showSection('b')">b</button>
+        <button onclick="showSection('c')">c</button>
+        <button onclick="showSection('d')">d</button>
     </div>
     <div id="section-private" class="section" style="display: none; text-align: center; margin-top: 50px;">
         <img src="En Passant.png" width="300">
